<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txt_codigo"
        android:layout_width="230dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/txt_codigo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_descripcion"
        android:layout_width="231dp"
        android:layout_height="58dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/txt_descripcion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/text_precio"
        android:layout_width="232dp"
        android:layout_height="63dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="132dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/txt_precio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="367dp"
        android:layout_height="62dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="52dp"
        android:text="@string/BotonRegistrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_precio" />

    <Button
        android:id="@+id/button2"
        android:layout_width="372dp"
        android:layout_height="62dp"
        android:layout_marginStart="20dp"
        android:text="@string/BotonBuscar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button3"
        android:layout_width="366dp"
        android:layout_height="59dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:text="@string/BotonModificar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="367dp"
        android:layout_height="55dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:text="@string/BotonEliminar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

</androidx.constraintlayout.widget.ConstraintLayout>